recursion.lessons.recursion.koch.SquareKoch.scala.code
def snowSquare (levels:Int, length:Double) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
def squareSide(levels:Int, length:Double) {
	   if(levels!=0) {
   	  
       snowSide(levels-1,length/3.0)
       gauche(90)
       snowSide(levels-1,length/3.0)
       droite(180)
   	  snowSide(levels-1,length/3.0)
   	  gauche(90)
   	  snowSide(levels-1,length/3.0)
	
   }
   else avance(length)
}
